--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-ydui": "^0.4.3",
+    "axios": "^0.17.1",
     "qs": "^6.3.1",
-    "vue-router": "^3.0.1"
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
+    "vue-ydui": "^0.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
