--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notices",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "公告号查询",
   "author": "Mr.Han",
   "private": true,
@@ -26,9 +26,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "fastclick": "^1.0.6",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
+    "compression-webpack-plugin": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
@@ -42,9 +40,12 @@
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fastclick": "^1.0.6",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
